--- a/.github/actions/comment-pr/package.json
+++ b/.github/actions/comment-pr/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terraform-comment-pr",
+  "name": "comment-pr",
   "version": "1.0.0",
   "description": "Adds a comment to the github PR",
   "main": "dist/index.js",
