--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_deploy_adhoc
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Comment PR
         uses: ./.github/actions/comment-pr
         with:
