--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -27,7 +27,9 @@ jobs:
     needs: build_and_deploy_adhoc
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - uses: ./.github/actions/repo-warm-up
 
       - name: Comment PR
         uses: ./.github/actions/comment-pr
