fix terraform comment

--- a/.github/actions/comment-pr/action.yaml
+++ b/.github/actions/comment-pr/action.yaml
@@ -7,6 +7,9 @@ inputs:
   title:
     description: 'The title of the comment(will replace comment if another comment with the same title exists)'
     required: true
+  block:
+    description: 'The code block of the comment'
+    required: false
   message:
     description: 'The message of the comment'
     required: true
