deploy with env

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,6 +63,7 @@ jobs:
         --region=${{ vars.GCP_REGION }} \
         --platform=managed \
         --allow-unauthenticated
+        --set-env-vars=ENV=${{ inputs.environment }}
 
     - name: Get service URL
       id: full-service-url
