Fixed service url

--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -24,4 +24,5 @@ jobs:
     with:
       environment: ${{ matrix.target }}
       service_name: ${{ matrix.service }}
+      service_url: ${{ matrix.service }}
     secrets: inherit
