--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,10 +27,6 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: ${{ inputs.environment }}
-
-    env:
-      IMAGE: ${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ vars.GCP_ARTIFACT_REPO }}/${{ inputs.service_url }}:latest
 
     outputs:
       full-service-url: ${{ steps.full-service-url.outputs.SERVICE_URL }}
@@ -39,9 +35,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set Dynamic Environment Variables
+      uses: actions/github-script@v7
+      id: dynamic_env_vars
+      with:
+        script: |
+          const envVars = {
+            dev: {
+              PROJECT_ID: '${{ secrets.GCP_DEV_PROJECT_ID }}',
+              ARTIFACT_REPO: '${{ vars.GCP_DEV_ARTIFACT_REPO }}',
+              IMAGE: '${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_DEV_PROJECT_ID }}/${{ vars.GCP_DEV_ARTIFACT_REPO }}/${{ inputs.service_url }}':latest
+            },
+            prod: {
+              PROJECT_ID: '${{ secrets.GCP_PROD_PROJECT_ID }}',
+              ARTIFACT_REPO: '${{ vars.GCP_PROD_ARTIFACT_REPO }}',
+              IMAGE: '${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROD_PROJECT_ID }}/${{ vars.GCP_PROD_ARTIFACT_REPO }}/${{ inputs.service_url }}':latest
+            }
+          };
+          return envVars[${{ inputs.environment }}];
+        result-encoding: string
+
     - uses: ./.github/actions/gcp-warm-up
       with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        project_id: ${{ steps.dynamic_env_vars.outputs.result.PROJECT_ID }}
         workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
         service_account: ${{ secrets.SERVICE_ACCOUNT }}
         region: ${{ vars.GCP_REGION }}
@@ -49,16 +65,16 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.IMAGE }} ./services/${{ inputs.service_name }}
+        docker build -t ${{ steps.dynamic_env_vars.outputs.result.IMAGE }} ./services/${{ inputs.service_name }}
 
     - name: Push Docker image to Google Artifact Registry
       run: |
-        docker push ${{ env.IMAGE }}
+        docker push ${{ steps.dynamic_env_vars.outputs.result.IMAGE }}
     
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy ${{ inputs.service_url }}-service \
-        --image=${{ env.IMAGE }} \
+        --image=${{ steps.dynamic_env_vars.outputs.result.IMAGE }} \
         --region=${{ vars.GCP_REGION }} \
         --platform=managed \
         --allow-unauthenticated \
