--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,6 +40,7 @@ jobs:
       id: dynamic_env_vars
       with:
         script: |
+          const core = require('@actions/core');
           const envVars = {
             dev: {
               PROJECT_ID: '${{ secrets.GCP_DEV_PROJECT_ID }}',
@@ -52,12 +53,15 @@ jobs:
               IMAGE: '${{ vars.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROD_PROJECT_ID }}/${{ vars.GCP_PROD_ARTIFACT_REPO }}/${{ inputs.service_url }}:latest'
             }
           };
-          return envVars['${{ inputs.environment }}'];
+          const selectedEnv = envVars['${{ inputs.environment }}'];
+          core.setOutput('PROJECT_ID', selectedEnv.PROJECT_ID);
+          core.setOutput('ARTIFACT_REPO', selectedEnv.ARTIFACT_REPO);
+          core.setOutput('IMAGE', selectedEnv.IMAGE);
 
     - name: output envs
       run: |
-        echo "${{ steps.dynamic_env_vars.outputs.result }}"
-        echo "${{ steps.dynamic_env_vars.outputs.result.PROJECT_ID }}"
+        echo "${{ steps.dynamic_env_vars.outputs }}"
+        echo "${{ steps.dynamic_env_vars.outputs.PROJECT_ID }}"
         echo "${{ steps.dynamic_env_vars.outputs.result.PROJECT_ID }}"
 
     - uses: ./.github/actions/gcp-warm-up
