--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,6 +24,10 @@ on:
         description: 'The full URL of the deployed service'
         value: ${{ jobs.build_and_deploy.outputs.full-service-url }}
 
+env:
+  PROJECT_ID: ''
+  IMAGE: ''
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
