--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,6 +4,11 @@ permissions:
   contents: read
   id-token: write
 
+# Environment variables to be set dynamically later in the workflow
+env:
+  PROJECT_ID: ''
+  IMAGE: ''
+
 on:
   workflow_call:
     inputs:
@@ -24,10 +29,6 @@ on:
         description: 'The full URL of the deployed service'
         value: ${{ jobs.build_and_deploy.outputs.full-service-url }}
 
-env:
-  PROJECT_ID: ''
-  IMAGE: ''
-
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -41,7 +42,6 @@ jobs:
 
     - name: Set Dynamic Environment Variables
       uses: actions/github-script@v7
-      id: dynamic_env_vars
       with:
         script: |
           const envVars = {
