--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -7,7 +7,7 @@ on:
         required: true
         description: 'The branch name of the adhoc deployment'
         type: string
-  pull_request:
+  # pull_request:
 
 jobs:
   build_and_deploy_adhoc:
