--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -9,8 +9,8 @@ on:
   schedule:
     - cron: '0 0 * * *'  # Every day at 00:00 UTC
   pull_request:
-    # types:
-    #   - closed
+    types:
+      - closed
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
