--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -41,8 +41,14 @@ jobs:
           --format="value(metadata.name, metadata.labels.pr_number)" \
           --filter="metadata.labels.pr_number:*")
 
+        # Check if SERVICES is empty
+        if [ -z "$SERVICES" ]; then
+          echo "No services found with a pr_number label."
+          exit 0
+        fi
+
         # Convert the SERVICES string to an array
-        IFS=$'\n' read -r -d '' -a services_array <<< "$SERVICES"
+        IFS=$'\n' read -r -d '' -a services_array <<< "$SERVICES"$'\n'
 
         for service_entry in "${services_array[@]}"; do
           SERVICE_NAME=$(echo $service_entry | awk '{print $1}')
