--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -60,7 +60,7 @@ jobs:
             console.log(`Checking PR #${prNumber} for service ${serviceName}`);
     
             try {
-              const pr = await github.pulls.get({
+              const pr = await github.rest.pulls.get({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: prNumber,
