--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         script: |    
           // Fetch the list of adhoc services
-          const servicesOutput = await (exec.exec(`gcloud run services list \
+          const servicesOutput = (await exec.exec(`gcloud run services list \
             --platform=managed \
             --region=${{ vars.GCP_REGION }} \
             --format="value(metadata.name, metadata.labels.pr_number)" \
