--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,16 @@
         "source.fixAll.eslint": "always"
     },
     "eslint.format.enable": true,
-    "editor.tabSize": 4,
+    "editor.tabSize": 2,
     "editor.detectIndentation": false,
-    "[github-actions-workflow]": {
-        "editor.tabSize": 2
-    },
     "files.associations": {
         "**/.github/**/*.yml": "github-actions-workflow",
         "**/.github/**/*.yaml": "github-actions-workflow"
+    },
+    "yaml.schemas": {
+      "https://json.schemastore.org/helmfile.json": [
+        "file:///home/yuvadius/Desktop/Postrix/kubernetes/core/helmfile-dev.yaml",
+        "file:///home/yuvadius/Desktop/Postrix/kubernetes/core/helmfile-prod.yaml"
+      ]
     }
 }
