--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -73,19 +73,13 @@ jobs:
     - name: Push Docker image to Google Artifact Registry
       run: |
         docker push ${{ env.IMAGE }}
-    
-    - name: Deploy to Cloud Run
+
+    - name: Deploy to Kubernetes
       run: |
-        gcloud run deploy ${{ inputs.service_url }} \
-        --image=${{ env.IMAGE }} \
-        --region=${{ vars.GCP_REGION }} \
-        --platform=managed \
-        --allow-unauthenticated \
-        --set-env-vars=ENV=${{ inputs.environment }} \
-        --labels=branch=${{ inputs.service_url }},pr_number=${{ github.event.pull_request.number }}
+        helmfile sync --file ${{ inputs.service_name }}/helmfile.yaml --environment=${{ inputs.environment }}
 
     - name: Get service URL
       id: full-service-url
       run: |
-        SERVICE_URL=$(gcloud run services describe ${{ inputs.service_url }} --region=${{ vars.GCP_REGION }} --format='value(status.url)')
+        SERVICE_URL="https://example.com"
         echo "SERVICE_URL=$SERVICE_URL" >> $GITHUB_OUTPUT
